Fix some truncated icons

--- a/plugins/calendar/skins/larry/calendar.css
+++ b/plugins/calendar/skins/larry/calendar.css
@@ -683,7 +683,7 @@ a.miniColors-trigger {
 }
 
 .event-attendees span.attendee {
-	padding-right: 18px;
+	padding: 1px 18px 1px 0;
 	margin-right: 0.5em;
 	background: url(images/attendee-status.png) right 0 no-repeat;
 }
@@ -1239,6 +1239,7 @@ td.topalign {
 	height: 14px;
 	border-radius: 4px;
 	-moz-border-radius: 4px;
+	vertical-align: middle;
 }
 
 .availability img.availabilityicon.loading {
@@ -1296,10 +1297,6 @@ td.topalign {
 	white-space: nowrap;
 }
 
-#edit-attendees-legend img.availabilityicon {
-	vertical-align: middle;
-}
-
 .edit-attendees-table tbody td.confirmstate {
 	overflow: hidden;
 	white-space: nowrap;
@@ -1313,22 +1310,27 @@ td.topalign {
 }
 
 .edit-attendees-table td.confirmstate span.needs-action {
+	height: 14px;
 }
 
 .edit-attendees-table td.confirmstate span.accepted {
 	background-position: 5px -20px;
+	height: 14px;
 }
 
 .edit-attendees-table td.confirmstate span.declined {
 	background-position: 5px -40px;
+	height: 14px;
 }
 
 .edit-attendees-table td.confirmstate span.tentative {
 	background-position: 5px -60px;
+	height: 14px;
 }
 
 .edit-attendees-table td.confirmstate span.delegated {
 	background-position: 5px -180px;
+	height: 14px;
 }
 
 #attendees-freebusy-table {
